--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -21,7 +21,7 @@
 
 .button {
   padding: 5px 10px;
-  background-color: #434b82;
-  border: 1px solid #ccc;
+  background-color: #21069b;
+  border: 1px solid #6a9213;
   cursor: pointer;
 }
