--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -8,12 +8,7 @@
   font-weight: 500;
 }
 
-.navLink:hover,
-.navLink:focus {
-  color: #3368f1;
-}
-
 .navLink.isActive {
   font-weight: 700;
-  color: #0a3dca;
+  color: #910786;
 }
