--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,10 +1,31 @@
-.searchBox {
-  padding: 10px;
-  margin-bottom: 20px;
+.search {
+  display: flex;
+  flex-direction: column;
+  width: 450px;
+  margin: 0 auto 16px;
 }
 
-.input {
+.searchLabel {
+  font-weight: 500;
+  text-align: left;
+  margin-left: 32px;
+  margin-bottom: 8px;
+}
+
+.relative {
+  position: relative;
+}
+
+.searchIcon {
+  position: absolute;
+  left: 6px;
+  top: 6px;
+  pointer-events: none;
+}
+
+.searchInput {
   width: 100%;
-  padding: 5px;
-  border: 2px solid rgba(154, 17, 154, 0.792);
+  height: 36px;
+  padding: 8px 16px 8px 32px;
+  font-size: 16px;
 }
